taintsandtolarence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment

  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # affinity:
      #   nodeAffinity:
          # requiredDuringSchedulingIgnoredDuringExecution:
          #   nodeSelectorTerms:
          #   - matchExpressions:
          #     - key: env
          #       operator: In
          #       values:
          #       - testing
 
          # preferredDuringSchedulingIgnoredDuringExecution:
          # - weight: 1
          #   preference:
          #     matchExpressions:
          #     - key: envs
          #       operator: In
          #       values:
          #       - testing # actual test for checking changed to testing

      tolerations:
      - key: "k"
        operator: "Equal"
        value: "v"
        effect: "NoSchedule"
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
