constrain.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNotLatest
metadata:
  name: no-latest-tag
  namespace: adm
spec:
  match:
    kinds:
      - apiGroups: ["apps/v1"]
        kinds: ["deployments"]
